fix(frontend/controller): hide navigator line counter text on mobile
Closes #321

--- a/app/frontend/src/Controller/Navigator.css
+++ b/app/frontend/src/Controller/Navigator.css
@@ -28,5 +28,8 @@
   .navigator .text {
     white-space: inherit;
   }
-  
+
+  .navigator-controls .line-counter {
+    display: none;
+  }
 }
